Work on AStar