@@ -1,8 +1,6 @@
 package com.krld.ant.model;
 
-import java.util.ArrayDeque;
-import java.util.Deque;
-import java.util.Queue;
+import java.util.*;
 
 /**
  * Created by Andrey on 5/14/2014.
@@ -12,12 +10,13 @@ public class AntAStarMoveBehaviour implements MoveBehaviour {
     private static final int COMMON_NODE = 0;
     private static final double RANDOM_WAY_RATIO = 0f;
     private static final double MOVE_COST = 1;
-    private static final boolean BREAK_TIES = false;
+    private static final boolean BREAK_TIES = true;
     private Ant ant;
     private MyGame context;
-    private Deque<Node> openNodes;
+    private List<Node> openNodes;
     private ArrayDeque<Node> closedNodes;
     private Point goalPosition;
+    private Node startNode;
 
     @Override
     public void setAnt(Ant ant) {
@@ -27,17 +26,54 @@ public class AntAStarMoveBehaviour implements MoveBehaviour {
     @Override
     public void update() {
         //    System.out.println("AStar update");
+        //    if (true) return;
         aStarCalc();
     }
 
     private void aStarCalc() {
         goalPosition = pickGoalPosition();
         closedNodes = new ArrayDeque<Node>();
-        openNodes = new ArrayDeque<Node>();
-        openNodes.add(new Node(ant.getPosition(), START_NODE));
-        while (!openNodes.getFirst().getPosition().equals(goalPosition)) {
+        openNodes = new ArrayList<Node>();
+        startNode = new Node(ant.getPosition(), START_NODE);
+        calcF(startNode);
+        openNodes.add(startNode);
+        while (!openNodes.get(0).getPosition().equals(goalPosition)) {
+            Node current = openNodes.get(0);
+            openNodes.remove(current);
+            closedNodes.add(current);
+            for (Node neighbor : getNeighbors(current)) {
 
+            }
+            sortOpenNodes();
+            break;
         }
+    }
+
+    private List<Node> getNeighbors(Node node) {
+        List<Node> neighbors = new ArrayList<Node>();
+        return neighbors;
+    }
+
+    private void calcF(Node node) {
+        double heuristik = getManhattanDistance(node.getPosition(), goalPosition);
+        double pathCost = (node.getParent() == null ? 0 : node.getParent().getG() + MOVE_COST);
+        double f = heuristik + pathCost;
+        node.setF(f);
+        node.setG(pathCost);
+        node.setH(heuristik);
+    }
+
+    private void sortOpenNodes() {
+        Collections.sort(openNodes, new Comparator<Node>() {
+            @Override
+            public int compare(Node o1, Node o2) {
+                if (o1.getF() > o2.getF()) {
+                    return -1;
+                } else {
+                    return 1;
+                }
+            }
+        });
     }
 
     private Point pickGoalPosition() {
@@ -55,22 +91,14 @@ public class AntAStarMoveBehaviour implements MoveBehaviour {
     private double getManhattanDistance(Point position, Point position1) {
         double dx = Math.abs(position.getX() - position1.getX());
         double dy = Math.abs(position.getY() - position1.getY());
-        if (BREAK_TIES && ant.getDestination() != AntDestination.TO_NEST) {
+        if (BREAK_TIES && startNode != null) {
             double dx1 = position.getX() - position1.getX();
             double dy1 = position.getY() - position1.getY();
-            double dx2 = ant.getNest().getPosition().getX() - position1.getX();
-            double dy2 = ant.getNest().getPosition().getY() - position1.getY();
+            double dx2 = startNode.getPosition().getX() - position1.getX();
+            double dy2 = startNode.getPosition().getX() - position1.getY();
             double cross = Math.abs(dx1 * dy2 - dx2 * dy1);
             return MOVE_COST * (dx + dy) + cross * 0.01d;
-        } else if (BREAK_TIES && ant.getDestination() == AntDestination.TO_NEST) {
-            double dx1 = position.getX() - position1.getX();
-            double dy1 = position.getY() - position1.getY();
-            double dx2 = ant.getPickedWayPoint().getPosition().getX() - position1.getX();
-            double dy2 = ant.getPickedWayPoint().getPosition().getY() - position1.getY();
-            double cross = Math.abs(dx1 * dy2 - dx2 * dy1);
-            return MOVE_COST * (dx + dy) + cross * 0.01d;
-        }
-        {
+        } else {
             return MOVE_COST * (dx + dy);
         }
     }
@@ -86,6 +114,10 @@ public class AntAStarMoveBehaviour implements MoveBehaviour {
 
     private class Node {
         private final int nodeType;
+        private double f;
+        private double g;
+        private double h;
+        private Node parent;
 
         public Point getPosition() {
             return position;
@@ -96,6 +128,38 @@ public class AntAStarMoveBehaviour implements MoveBehaviour {
         public Node(Point position, int nodeType) {
             this.nodeType = nodeType;
             this.position = position;
+        }
+
+        public double getF() {
+            return f;
+        }
+
+        public void setF(double f) {
+            this.f = f;
+        }
+
+        public void setG(double g) {
+            this.g = g;
+        }
+
+        public double getG() {
+            return g;
+        }
+
+        public void setH(double h) {
+            this.h = h;
+        }
+
+        public double getH() {
+            return h;
+        }
+
+        public Node getParent() {
+            return parent;
+        }
+
+        public void setParent(Node parent) {
+            this.parent = parent;
         }
     }
 }
